--- a/Instagram/Base.lproj/Main.storyboard
+++ b/Instagram/Base.lproj/Main.storyboard
@@ -138,7 +138,33 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qxZ-KR-0f7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1317.5" y="631.5"/>
+            <point key="canvasLocation" x="1802.5" y="607.5"/>
+        </scene>
+        <!--Profile-->
+        <scene sceneID="RNM-hz-RfI">
+            <objects>
+                <viewController id="AD9-Kl-6LA" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="cqn-GD-jES"/>
+                        <viewControllerLayoutGuide type="bottom" id="sof-cH-hiK"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="aAt-Zq-RkO">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mcb-2f-nmz">
+                                <rect key="frame" x="160" y="319" width="55" height="30"/>
+                                <state key="normal" title="Log Out"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Profile" id="mEc-xc-bpL"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DyB-dQ-Y3W" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1802.5" y="1414.5"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="kq6-37-Ng8">
@@ -152,11 +178,12 @@
                     <connections>
                         <segue destination="GdM-1m-7D3" kind="relationship" relationship="viewControllers" id="Q6b-Cf-3sI"/>
                         <segue destination="5No-sh-6mA" kind="relationship" relationship="viewControllers" id="E5i-sc-FgH"/>
+                        <segue destination="AD9-Kl-6LA" kind="relationship" relationship="viewControllers" id="LGv-yq-xWK"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="u94-iT-kQX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1317.5" y="-211.5"/>
+            <point key="canvasLocation" x="1299.5" y="249.5"/>
         </scene>
     </scenes>
 </document>
